--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.44.1",
     "framer-motion": "^12.16.0",
     "next": "15.3.3",
-    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scan": "^0.3.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
@@ -27,7 +26,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
